# swift-winrt

./: .gitignore  BuildTests.ps1  Building.md  CMakeLists.txt  License.txt  Package.resolved  Package.swift  Readme.md
Generator/: CMakeLists.txt  CMakePresets.json  Create-NuGetPackage.ps1  Dependencies.cmake  Package.resolved  Package.swift  Projection.schema.json  SPMPostBuild.ps1  mscorlib.cmake
Generator/Dependencies/: CMakeLists.txt
Generator/Dependencies/swift-argument-parser/: CMakeLists.txt
Generator/Dependencies/swift-collections/: CMakeLists.txt
Generator/Dependencies/swift-dotnetmetadata/: CMakeLists.txt
Generator/InteropTests/: Build-WinRTComponentProjection.ps1  CMakeLists.txt  CMakePresets.json  Package.swift  SPMPrebuild.ps1  projection.json
Generator/InteropTests/Tests/: ActivationFactoryResolutionTests.swift  ErrorTests.swift  InspectableBoxingTests.swift  ObjectExportingTests.swift  PropertyTests.swift  StructTests.swift  ValueReturnRoundtripTests.swift  WeakReferenceTests.swift
Generator/InteropTests/WinRTComponent/: CMakeLists.txt  Errors.h  Events.cpp  GenerateProjection.cmake  GenerateWinMD.cmake  InspectableBoxing.cpp  MinimalTypes.idl  Numbers.cpp  ReturnArgument.h  Strings.idl  SwiftEnum.idl  WeakReferencer.cpp
Generator/NuGet/: CMakeLists.txt  Create-Package.ps1  Package.nuspec
Generator/Sources/: CMakeLists.txt
Generator/Sources/CodeWriters/: CMakeLists.txt  FileTextOutputStream.swift  IndentedTextOutputStream.swift  LineBasedTextOutputStream.swift  TextDocumentOutputStream.swift
Generator/Sources/ProjectionGenerator/: CAbi.swift  CAbiHeaderWriter+COMInterfaceDecl.swift  CAbiHeaderWriter.swift  Casing.swift  FileTextOutputStream.swift  ModuleTypeDiscoverer.swift  ParamProjection.swift  SourcePreamble.swift  String+prefixes.swift  SupportModule.swift  SwiftAssemblyModuleFileWriter+classes.swift  SwiftAssemblyModuleFileWriter+delegates.swift  SwiftAssemblyModuleFileWriter+enums.swift  SwiftAssemblyModuleFileWriter+extensions.swift  SwiftAssemblyModuleFileWriter+interfaces.swift  SwiftAssemblyModuleFileWriter+members.swift  SwiftAssemblyModuleFileWriter+referenceTypes.swift  SwiftAssemblyModuleFileWriter+structs.swift  SwiftAssemblyModuleFileWriter+virtualTable.swift  SwiftAssemblyModuleFileWriter+vtable.swift  SwiftAssemblyModuleFileWriter.swift  SwiftNamespaceModuleFileWriter.swift  SwiftProjection+Module.swift  SwiftProjection+conversion.swift  SwiftProjection+documentation.swift  SwiftProjection+params.swift  SwiftProjection+types.swift  SwiftProjection.swift  TypeDiscoverer.swift  TypeProjection.swift  WinRTMethodKind.swift
Generator/Sources/ProjectionModel/: ABIMethodKind.swift  CMakeLists.txt  ClassFactoryKind.swift  Module.swift  ParamBinding.swift  ParamProjection.swift  Projection+abi.swift  Projection+conversion.swift  Projection+documentation.swift  Projection+params.swift  Projection+types.swift  Projection.swift  ReferenceNullability.swift  SHA1.swift  SupportModule.swift  SupportModules.swift  SwiftProjection+Module.swift  SwiftProjection+abi.swift  SwiftProjection+conversion.swift  SwiftProjection+documentation.swift  SwiftProjection+params.swift  SwiftProjection+types.swift  SwiftProjection.swift  TypeBinding.swift  TypeDiscoverer.swift  TypeProjection.swift  Unowned.swift  WinRTMethodKind.swift  WinRTTypeDiscoverer.swift
Generator/Sources/SwiftWinRT/: BuildSystemOptions.swift  CAbi+writing.swift  CAbi.swift  CMakeLists.txt  CMakeOptions.swift  CommandLineArguments.swift  EntryPoint.swift  Filter.swift  GenerateCommand.swift  GuidAttribute.swift  Method+isAccessor.swift  ModuleTypeDiscoverer.swift  ProjectionConfig.swift  ProjectionError.swift  ReferenceNullability.swift  SPMOptions.swift  SwiftAssemblyModuleFileWriter+classes.swift  SwiftAssemblyModuleFileWriter+delegates.swift  SwiftAssemblyModuleFileWriter+interfaces.swift  (+20 more)
Generator/Tests/: IndentedTextOutputStreamTests.swift  LineBasedTextOutputStreamTests.swift  SwiftSyntaxWriterTests.swift  TextDocumentOutputStreamTests.swift
Generator/mscorlib/: CMakeLists.txt
InteropTests/: .gitignore  Activation.manifest  Build-WinRTComponentProjection.ps1  Build.ps1  BuildAndGenerate.ps1  BuildWinRTComponent.ps1  CMakeLists.txt  CMakePresets.json  GenerateProjection.cmake  GenerateProjection.ps1  GeneratedPackage.swift  Package.swift  Run.ps1  SPMPrebuild.ps1  modulemap.json  projection.json
InteropTests/Tests/: ActivationFactoryResolutionTests.swift  ActivationFactoryTests.swift  ArrayTests.swift  Asserts.swift  AsyncTests.swift  BoxingTests.swift  BufferTests.swift  BuiltInConformancesTests.swift  ByteBufferTests.swift  ClassInheritanceTests.swift  CollectionTests.swift  CompositionTests.swift  DateTimeTests.swift  DeprecationTests.swift  EnumTests.swift  ErrorTests.swift  EventTests.swift  FlatModuleTests.swift  InspectableBoxingTests.swift  InterfaceImplementationTests.swift  LifetimeTests.swift  MetaclassResolutionTests.swift  NamespaceModuleTests.swift  NullValueTests.swift  NumbersTests.swift  ObjectExportingTests.swift  OverloadingTests.swift  PropertyTests.swift  ReferenceBoxingTests.swift  ReferenceCountingTests.swift  StringTests.swift  StructTests.swift  SwiftEnumTests.swift  ValueOutParamRoundtripTests.swift  ValueReturnRoundtripTests.swift  ValueRoundtripTests.swift  WeakReferenceTests.swift  WinRTTestCase.swift
InteropTests/WinRTComponent/: .gitignore  All.idl  Arrays.cpp  Arrays.h  Arrays.idl  Boxing.cpp  Boxing.h  Boxing.idl  Build.ps1  ByteBuffers.cpp  ByteBuffers.h  ByteBuffers.idl  CMakeLists.txt  CMakePresets.json  Clear-PEDateTimeStamp.ps1  Collections.cpp  Collections.h  Collections.idl  Enums.idl  Errors.cpp  Errors.h  Errors.idl  Events.cpp  Events.h  Events.idl  ForCustomActivationFactoryResolution.idl  ForCustomMetaclassResolution.cpp  ForCustomMetaclassResolution.h  ForCustomMetaclassResolution.idl  GenerateProjection.cmake  GenerateWinMD.cmake  InspectableBoxing.cpp  InspectableBoxing.h  InspectableBoxing.idl  Int32Wrapper.h  Int32Wrapper.idl  InterfaceCasting.h  InterfaceCasting.idl  ManualAsyncOperation.h  ManualAsyncOperation.idl  (+45 more)
(+705 files in other folders)
